--- a/app/src/main/res/drawable/custom_button_next.xml
+++ b/app/src/main/res/drawable/custom_button_next.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="ring">
+<selector xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <solid android:color="@color/black"/>
-    <corners android:radius="10dp"/>
-</shape>
+    <item android:drawable="@drawable/next" android:state_enabled="false"/>
+    <item android:drawable="@drawable/next" android:state_pressed="true"/>
+    <item android:drawable="@drawable/next" android:state_pressed="false"/>
+</selector>
