--- a/app/src/main/res/drawable/custom_button_next.xml
+++ b/app/src/main/res/drawable/custom_button_next.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <item android:drawable="@drawable/next" android:state_enabled="false"/>
-    <item android:drawable="@drawable/next" android:state_pressed="true"/>
-    <item android:drawable="@drawable/next" android:state_pressed="false"/>
+    <item android:drawable="@drawable/next_select" android:state_pressed="true"/>
+    <item android:drawable="@drawable/next_unselect" android:state_pressed="false"/>
 </selector>
