--- a/app/src/main/res/drawable/custom_button_prev.xml
+++ b/app/src/main/res/drawable/custom_button_prev.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:drawable="@drawable/back" android:state_enabled="false"/>
-    <item android:drawable="@drawable/back" android:state_pressed="true"/>
-    <item android:drawable="@drawable/back" android:state_pressed="false"/>
+    <item android:drawable="@drawable/back_deactive" android:state_enabled="false"/>
+    <item android:drawable="@drawable/back_select" android:state_pressed="true"/>
+    <item android:drawable="@drawable/back_unselect" android:state_pressed="false"/>
 </selector>
