--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,5 +8,11 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="red">#FFFF0000</color>
-    <color name="grey">#A1A1A1</color>
+    <color name="grey">#D1D3DD</color>
+    <color name="tab_text_unselect">#A8A6AB</color>
+    <color name="tab_text_select">#454141</color>
+    <color name="tab_background_unselect">#ECEEFB</color>
+    <color name="tab_background_select">#F4F5FF</color>
+    <color name="tab_background">#ECEEFB</color>
+    <color name="tab_underline">#999CAB</color>
 </resources>
