--- a/app/src/main/res/layout-land/fragment_main.xml
+++ b/app/src/main/res/layout-land/fragment_main.xml
@@ -11,8 +11,8 @@
 
     <ImageView
         android:id="@+id/gifImageView"
-        android:layout_width="match_parent"
-        android:layout_height="200dp"
+        android:layout_width="300dp"
+        android:layout_height="300dp"
         android:layout_margin="20dp"
         android:src="@android:drawable/ic_menu_gallery"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -26,18 +26,19 @@
         android:layout_width="100dp"
         android:layout_height="100dp"
         android:layout_marginTop="20dp"
-        android:background="@drawable/back"
+        android:background="@drawable/custom_button_prev"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/buttonNext"
-        app:layout_constraintHorizontal_bias="0.443"
+        app:layout_constraintHorizontal_bias="0.126"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/gifImageView" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.58" />
 
     <Button
         android:id="@+id/buttonNext"
         android:layout_width="100dp"
         android:layout_height="100dp"
-        android:layout_marginEnd="164dp"
+        android:layout_marginEnd="64dp"
         android:background="@drawable/custom_button_next"
         app:layout_constraintBottom_toBottomOf="@+id/buttonPrev"
         app:layout_constraintEnd_toEndOf="parent"
