--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,30 +12,30 @@
     android:id="@+id/main"
     tools:context=".MainActivity">
 
-    <Button
-        android:id="@+id/buttonActivityPrev"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:background="@drawable/custom_button_prev"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_marginTop="600dp"
-        app:layout_constraintHorizontal_bias="0.240"/>
+<!--    <Button-->
+<!--        android:id="@+id/buttonActivityPrev"-->
+<!--        android:layout_width="wrap_content"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:background="@drawable/custom_button_prev"-->
+<!--        app:layout_constraintEnd_toEndOf="parent"-->
+<!--        app:layout_constraintStart_toStartOf="parent"-->
+<!--        app:layout_constraintTop_toTopOf="parent"-->
+<!--        app:layout_constraintBottom_toBottomOf="parent"-->
+<!--        android:layout_marginTop="600dp"-->
+<!--        app:layout_constraintHorizontal_bias="0.240"/>-->
 
 
-    <Button
-        android:id="@+id/buttonActivityNext"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:background="@drawable/custom_button_next"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_marginTop="600dp"
-        app:layout_constraintHorizontal_bias="0.760"/>
+<!--    <Button-->
+<!--        android:id="@+id/buttonActivityNext"-->
+<!--        android:layout_width="wrap_content"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:background="@drawable/custom_button_next"-->
+<!--        app:layout_constraintEnd_toEndOf="parent"-->
+<!--        app:layout_constraintStart_toStartOf="parent"-->
+<!--        app:layout_constraintTop_toTopOf="parent"-->
+<!--        app:layout_constraintBottom_toBottomOf="parent"-->
+<!--        android:layout_marginTop="600dp"-->
+<!--        app:layout_constraintHorizontal_bias="0.760"/>-->
 
     <com.google.android.material.appbar.AppBarLayout
         android:layout_width="match_parent"
